--- a/SBUI/src/app/app.component.html
+++ b/SBUI/src/app/app.component.html
@@ -6,9 +6,12 @@
   <div class="row h-100">
     <div class="col-md-2 left-menu">
       <div class="row">
-        <div class="col-md-12">Overview</div>
-        <div class="col-md-12">My Company</div>
-        <div class="col-md-12">Controls</div>
+        <div class="col-md-12 mt-5"><i class="fas fa-tachometer-alt fa-4x"></i></div>
+        <div class="col-md-12 mt-2">Overview</div>
+        <div class="col-md-12 mt-3 selected"><i class="far fa-building fa-4x"></i></div>
+        <div class="col-md-12 mt-2 selected">My Company</div>
+        <div class="col-md-12 mt-3"><i class="far fa-list-alt fa-4x"></i></div>
+        <div class="col-md-12 mt-2">Controls</div>
       </div>
     </div>
     <div class="col-md-10"></div>
