--- a/SBUI/src/app/app.component.html
+++ b/SBUI/src/app/app.component.html
@@ -14,7 +14,9 @@
         <div class="col-md-12 mt-2">Controls</div>
       </div>
     </div>
-    <div class="col-md-10"></div>
+    <div class="col-md-10">
+      <app-company></app-company>
+    </div>
   </div>
 </div>
 <router-outlet></router-outlet>
