--- a/SBUI/src/app/app.component.html
+++ b/SBUI/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-light shadow-sm">
   <span class="navbar-brand mb-0 h1">Service Book</span>
 </nav>
 <div class="container-fluid h-100"> 
@@ -14,7 +14,7 @@
         <div class="col-md-12 mt-2">Controls</div>
       </div>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-10 main">
       <app-company></app-company>
     </div>
   </div>
