--- a/SBUI/src/app/company/company/company.component.html
+++ b/SBUI/src/app/company/company/company.component.html
@@ -1,5 +1,13 @@
 <div class="row shadow-sm mt-3 m-1 pb-3 pt-3">
-  <div class="col-md-12 mb-2">Icons
+  <div class="col-md-12 mb-2">
+    <img src="assets/images/departments/pipe.png" alt="Pipe" title="Pipe">
+    <img class="ml-2" src="assets/images/departments/electro.png" alt="Electro" title="Electro">
+    <img class="ml-2" src="assets/images/departments/ventilation.png" alt="Ventilation" title="Ventilation">
+    <img class="ml-2" src="assets/images/departments/telematics.png" alt="Telematics" title="Telematics">
+    <img class="ml-2" src="assets/images/departments/security.png" alt="Security" title="Secutiry">
+    <img class="ml-2" src="assets/images/departments/fire.png" alt="Fire" title="Fire">
+    <img class="ml-2" src="assets/images/departments/cooling.png" alt="Cooling" title="Cooling">
+    <img class="ml-2" src="assets/images/departments/maint.png" alt="Maintenance" title="Maintenance">
   </div>
   <div class="col-md-3">
     <img src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/62443174_2440250496216157_8456221913499303936_o.jpg?_nc_cat=105&_nc_oc=AQlN38IrT7YEJiADO-5T-R1WK1bP81L6yUs53i1kcDlRON23Fsk8aNNB4EGQT789Bag&_nc_ht=scontent.fsof3-1.fna&oh=f71c3b5ad6c4cec1c091ba7ee726ab04&oe=5D87FFC6" 
