--- a/SBUI/src/app/app.component.html
+++ b/SBUI/src/app/app.component.html
@@ -16,6 +16,7 @@
     </div>
     <div class="col-md-10 main">
       <app-company></app-company>
+      <app-central-menu></app-central-menu>
     </div>
   </div>
 </div>
