--- a/SBUI/src/app/components/company/company.component.html
+++ b/SBUI/src/app/components/company/company.component.html
@@ -1,10 +1,8 @@
 <div class="row shadow-sm mt-3 m-1 pb-3 pt-3">
-  <div class="col-md-12 mb-4">
-    <img *ngFor="let department of company.departments" class="mr-2" src="{{ department.pictureUrl }}" alt="{{ department.name }}" title="{{ department.name }}">
-  </div>
-  <div class="col-md-3">
+  <div class="col-md-3 pt-2">
     <img src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/62443174_2440250496216157_8456221913499303936_o.jpg?_nc_cat=105&_nc_oc=AQlN38IrT7YEJiADO-5T-R1WK1bP81L6yUs53i1kcDlRON23Fsk8aNNB4EGQT789Bag&_nc_ht=scontent.fsof3-1.fna&oh=f71c3b5ad6c4cec1c091ba7ee726ab04&oe=5D87FFC6" 
-    width="150" height="100" alt=""></div>
+    width="150" height="100" alt="">
+  </div>
   <div class="col-md mb-3">
     <div class="row">
         <div class="col-md-1 pt-2"><i class="far fa-building"></i> </div>
@@ -29,5 +27,9 @@
         <div class="col-md-5 pt-2"><i class="fas fa-user-tie"></i> Customer Contact:</div>
         <div class="col-md-7 pt-2">{{ company.customer.firstName + ' ' + company.customer.lastName }}</div>
     </div>
+  </div>
+  <div class="col-md-12">
+    <hr>
+    <img *ngFor="let department of company.departments" class="mr-2" width="25" src="{{ department.pictureUrl }}" alt="{{ department.name }}" title="{{ department.name }}">
   </div>
 </div>
