--- a/SBUI/src/app/components/company/company.component.css
+++ b/SBUI/src/app/components/company/company.component.css
@@ -8,3 +8,28 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+
+.menu-item {
+    color: grey;
+}
+
+.menu-item:hover {
+    color:#153153;
+    transition: 0.6s;
+}
+
+hr {
+    height: 4%;
+    background-color: #153153;;
+    margin-top: 50px;
+}
+
+.hr-left-border {
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+
+.hr-right-border {
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
