--- a/SBUI/src/app/components/company/wizard/wizard.component.html
+++ b/SBUI/src/app/components/company/wizard/wizard.component.html
@@ -1,3 +1,4 @@
+
 <div class="row mt-5 m-1">
   <div class="col-md"></div>
   <div class="col-md-6">
@@ -5,7 +6,7 @@
       <div class="col-md menu-item">
         <div class="row">
           <div class="p-0 col-md"></div>
-          <div class="p-0 col-md">
+          <div class="p-0 col-md icon" routerLinkActive='active' [routerLink]="['overview']">
               <span class="fa-stack fa-3x" style="vertical-align: top;">
                 <i class="far fa-circle fa-stack-2x "></i>
                 <i class="fas fa-info-circle fa-stack-1x"></i>
@@ -18,7 +19,7 @@
       <div class="col-md menu-item" >
         <div class="row">
             <div class="p-0 col-md"><hr class="hr-right-border"></div>
-            <div class="p-0 col-md">
+            <div class="p-0 col-md icon" routerLinkActive='active' [routerLink]="['contacts']">
                 <span class="fa-stack fa-3x" style="vertical-align: top;">
                   <i class="far fa-circle fa-stack-2x "></i>
                   <i class="fas fa-users fa-stack-1x"></i>
@@ -26,13 +27,12 @@
             </div>
             <div class="p-0 col-md"><hr class="hr-left-border"></div>
         </div>
-        
         Contacts
       </div>
       <div class="col-md menu-item">
         <div class="row">
             <div class="p-0 col-md"><hr class="hr-right-border"></div>
-            <div class="p-0 col-md">
+            <div class="p-0 col-md icon" routerLinkActive='active' [routerLink]="['structure']">
                 <span class="fa-stack fa-3x" style="vertical-align: top;" >
                   <i class="far fa-circle fa-stack-2x" ></i>
                   <i class="fas fa-network-wired fa-stack-1x" ></i>
