--- a/SBUI/src/app/company/company-details/company-details.component.html
+++ b/SBUI/src/app/company/company-details/company-details.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="col-md">
     <div class="col-md-12 d-inline"></div>
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-md-5 pt-2"><i class="fas fa-certificate"></i> Org. Number:</div>
         <div class="col-md-7 pt-2"> {{ company.organizationNumber }}</div>
     </div>
