--- a/SBUI/src/app/company/structure/structure.component.css
+++ b/SBUI/src/app/company/structure/structure.component.css
@@ -14,7 +14,7 @@
 .form-control:focus {
     outline: none;
     box-shadow: none;
-    border-color:  #153153;
+    border-color: #2F6DB9;
 }
 
 #inner-button:focus {
