--- a/SBUI/src/app/company/structure/structure.component.html
+++ b/SBUI/src/app/company/structure/structure.component.html
@@ -7,35 +7,49 @@
       <div class="col-md-10">
         <h6>Bulding / Object Name</h6>
         <div class="input-group">
-          <input aria-describedby="inner-button" class="form-control" kendoTextBox value="{{selectedKeysSecond}}" />
+          <input #objectsInput aria-describedby="inner-button" class="form-control" kendoTextBox
+            value="{{selectedObjects}}" />
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #first
-              (click)="showFirst=!showFirst"><i class="fas fa-list"></i></button>
+            <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #objectsButton
+              (click)="toggleObjects()"><i class="fas fa-list"></i></button>
           </div>
         </div>
-        <kendo-popup *ngIf="showFirst" [anchor]="first">
-          <kendo-treeview [nodes]="data" textField="text" kendoTreeViewHierarchyBinding kendoTreeViewExpandable
-            kendoTreeViewSelectable [selectBy]="'text'" [(selectedKeys)]="selectedKeysSecond" childrenField="items">
+        <kendo-popup #objectsPopup *ngIf="showObjects" [anchor]="objectsInput">
+          <kendo-treeview [nodes]="objects" textField="name" kendoTreeViewHierarchyBinding kendoTreeViewExpandable
+            kendoTreeViewSelectable [selectBy]="'name'" [(selectedKeys)]="selectedObjects" childrenField="items"
+            class="pr-5">
           </kendo-treeview>
         </kendo-popup>
       </div>
     </div>
   </div>
-  <div class="col-md pl-4 pr-4 mb-3">Object Type</div>
+  <div class="col-md pl-4 pr-4 mb-3">
+    <div class="row">
+      <div class="col-md-10">
+        <h6>Object Type</h6>
+        <kendo-combobox [data]="types" [textField]="'name'" [valueField]="'name'" class="w-100">
+        </kendo-combobox>
+      </div>
+    </div>
+  </div>
   <div class="col-md pl-4 pr-4 mb-3">
     <div class="row">
       <div class="col-md-10">
         <h6>TFM Code</h6>
         <div class="input-group">
-          <input aria-describedby="inner-button" class="form-control" kendoTextBox value="{{selectedKeys}}" />
+          <input #tfmsInput aria-describedby="inner-button" class="form-control" kendoTextBox
+            value="{{selectedTfms}}" />
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #anchor
-              (click)="show=!show"><i class="fas fa-list"></i></button>
+            <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #tfmsButton
+              (click)="toggleTfms()"><i class="fas fa-list"></i></button>
           </div>
         </div>
-        <kendo-popup *ngIf="show" [anchor]="anchor">
-          <kendo-treeview [nodes]="data" textField="text" kendoTreeViewHierarchyBinding kendoTreeViewExpandable
-            kendoTreeViewSelectable [selectBy]="'text'" [(selectedKeys)]="selectedKeys" childrenField="items">
+        <kendo-popup #tfmsPopup *ngIf="show" [anchor]="tfmsInput">
+          <kendo-treeview [nodes]="tfms" kendoTreeViewHierarchyBinding kendoTreeViewExpandable kendoTreeViewSelectable
+            [selectBy]="'name'" [(selectedKeys)]="selectedTfms" childrenField="items" class="pr-5">
+            <ng-template #test kendoTreeViewNodeTemplate let-dataItem>
+              {{dataItem.code}} {{dataItem.name}}
+            </ng-template>
           </kendo-treeview>
         </kendo-popup>
       </div>
