Add style to edit screen.

--- a/SBUI/src/app/company/company-details/company-details.component.html
+++ b/SBUI/src/app/company/company-details/company-details.component.html
@@ -1,4 +1,4 @@
-<div class="row shadow-sm mt-3 m-1 pb-3 pt-3">
+<div class="row shadow-sm mt-3 m-1 pb-3 pt-3 rounded">
   <div class="col-md-3 pt-2">
     <img
       src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/62443174_2440250496216157_8456221913499303936_o.jpg?_nc_cat=105&_nc_oc=AQlN38IrT7YEJiADO-5T-R1WK1bP81L6yUs53i1kcDlRON23Fsk8aNNB4EGQT789Bag&_nc_ht=scontent.fsof3-1.fna&oh=f71c3b5ad6c4cec1c091ba7ee726ab04&oe=5D87FFC6"
