--- a/SBUI/src/app/company/object-overview/object-overview.component.html
+++ b/SBUI/src/app/company/object-overview/object-overview.component.html
@@ -1,18 +1,21 @@
-<div class="accordion shadow-sm border-bottom mt-3" id="overviewAccordion">
-  <div class="card">
+<div class="accordion shadow-sm border-bottom my-3" id="overviewAccordion">
+  <div class="card rounded">
     <div class="card-header p-0" id="overviewHeading">
       <h5 class="mb-0">
         <div class="row">
-          <div class="col-md-8">
-            <button class="btn btn-block btn-link heading" type="button" data-toggle="collapse"
+          <div class="col-md">
+            <button class="btn btn-block btn-link font-weight-bold text-left mt-2 heading" type="button" data-toggle="collapse"
               data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
               <i class="fas fa-list"></i> Overview
             </button>
           </div>
-          <div class="col-md-4 heading-buttons">
-            <button kendoButton primary=true [look]="'flat'" class="overveiw-buttons">Controls</button>
-            <button kendoButton primary=true [look]="'flat'" class="overveiw-buttons">Deviations</button>
-            <button kendoButton primary=true [look]="'flat'" class="overveiw-buttons">Calendar</button>
+          <div class="col-md text-right m-2">
+            <button kendoButton [primary]=true [look]="'flat'">Controls</button>
+            <button kendoButton [primary]=true [look]="'flat'">Deviations</button>
+            <button kendoButton [primary]=true [look]="'flat'">Calendar</button>
+            <span class="pb-2 mx-1 border-left border-secondary"></span>
+            <button [routerLink]="['/company/structure/', object.id, 'edit']" kendoButton [primary]=true [look]="'flat'"
+              class="px-4"><i class="fas fa-pen mr-2"></i> Edit</button>
           </div>
         </div>
       </h5>
@@ -25,21 +28,22 @@
             <ng-template kendoTabContent>
               <div class="row">
                 <div class="col-md mt-3 ml-3">
-                  <div class="mb-3 font-weight-bold">Name: {{object.name}}</div>
-                  <div class="mb-3 font-weight-bold">Path:</div>
-                  <div class="mb-3 font-weight-bold">
+                  <div class="mb-3 h6">Name: <span class="font-weight-normal">{{object.name}}</span>
+                  </div>
+                  <div class="mb-3 h6">Path:</div>
+                  <div class="mb-3 h6">
                     Providers:
                     <kendo-dropdownlist class="ml-2" [data]="providers">
                     </kendo-dropdownlist>
                   </div>
-                  <div class="heading h5 mt-4 mb-4">Departments</div>
-                  <div *ngFor="let department of departments" >
-                    <img class="mb-2" width="25"
-                      src="{{ department.pictureUrl }}" alt="{{ department.name }}" title="{{ department.name }}">
-                      <span class="ml-2">{{department.name}}</span>
+                  <div class="text-left h5 mt-4 mb-4 heading">Departments</div>
+                  <div *ngFor="let department of departments">
+                    <img class="mb-2" width="25" src="{{ department.pictureUrl }}" alt="{{ department.name }}"
+                      title="{{ department.name }}">
+                    <span class="ml-2">{{department.name}}</span>
                   </div>
                 </div>
-                <div class="col-md-4 picture">
+                <div class="col-md-4">
                   <img
                     src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/62443174_2440250496216157_8456221913499303936_o.jpg?_nc_cat=105&_nc_oc=AQlN38IrT7YEJiADO-5T-R1WK1bP81L6yUs53i1kcDlRON23Fsk8aNNB4EGQT789Bag&_nc_ht=scontent.fsof3-1.fna&oh=f71c3b5ad6c4cec1c091ba7ee726ab04&oe=5D87FFC6"
                     class="img-fluid float-right" width="300" alt="">
@@ -49,19 +53,10 @@
           </kendo-tabstrip-tab>
           <kendo-tabstrip-tab [title]="'Contacts'">
             <ng-template kendoTabContent>
-              <p>
-                Tallinn is the capital and largest city of Estonia. It is situated on the northern coast of the country,
-                on the shore of the Gulf of Finland, 80 km (50 mi) south of Helsinki, east of Stockholm and west of
-                Saint Petersburg. From the 13th century until 1918 (and briefly during the Nazi occupation of Estonia
-                from 1941 to 1944), the city was known as Reval. Tallinn occupies an area of 159.2 km2 (61.5 sq mi) and
-                has a population of 443,894. Approximately 32% of Estonia's total population lives in Tallinn.
-              </p>
-              <p>
-                Tallinn was founded in 1248, but the earliest human settlements are over 5,000 years old, making it one
-                of the oldest capital cities of Northern Europe. Due to its strategic location, the city became a major
-                trade hub, especially from the 14th to the 16th century, when it grew in importance as part of the
-                Hanseatic League.
-              </p>
+              <div class="mt-3 mb-3 font-weight-bold">Building/object Responsible Person: <span
+                  class="font-weight-normal">Kotaraka Rumen</span> </div>
+              <div class="mb-3 font-weight-bold">Building/object Dev. Responsible Person: <span
+                  class="font-weight-normal">Kotaraka Rumen</span></div>
             </ng-template>
           </kendo-tabstrip-tab>
         </kendo-tabstrip>
