Add company resolver.

--- a/SBUI/src/app/company/edit/edit.component.html
+++ b/SBUI/src/app/company/edit/edit.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md text-right">
           <button kendoButton [primary]=true [look]="'flat'"><i class="fas fa-save pr-2"></i> Save</button>
-          <button kendoButton [routerLink]="" [primary]=true [look]="'flat'"><i
+          <button kendoButton [routerLink]="['/company/structure/', id]" [primary]=true [look]="'flat'"><i
               class="fas fa-times pr-2 text-danger"></i>
             Cancel</button>
         </div>
