--- a/SBUI/src/app/company/object-overview/object-overview.component.html
+++ b/SBUI/src/app/company/object-overview/object-overview.component.html
@@ -33,11 +33,11 @@
                   <div class="mb-3 h6">Path:</div>
                   <div class="mb-3 h6">
                     Providers:
-                    <kendo-dropdownlist class="ml-2" [data]="providers">
+                    <kendo-dropdownlist class="ml-2" [data]="providers" [textField]="'name'" [valueField]="'name'" [(ngModel)]="defaultProvider" (valueChange)="handleValue($event)">
                     </kendo-dropdownlist>
                   </div>
                   <div class="text-left h5 mt-4 mb-4 heading">Departments</div>
-                  <div *ngFor="let department of departments">
+                  <div *ngFor="let department of defaultProvider.departments">
                     <img class="mb-2" width="25" src="{{ department.pictureUrl }}" alt="{{ department.name }}"
                       title="{{ department.name }}">
                     <span class="ml-2">{{department.name}}</span>
