--- a/SBUI/src/app/company/object-overview/object-overview.component.html
+++ b/SBUI/src/app/company/object-overview/object-overview.component.html
@@ -33,7 +33,7 @@
                   <div class="mb-3 h6">Path:</div>
                   <div class="mb-3 h6">
                     Providers:
-                    <kendo-dropdownlist class="ml-2" [data]="providers" [textField]="'name'" [valueField]="'name'" [(ngModel)]="defaultProvider" (valueChange)="handleValue($event)">
+                    <kendo-dropdownlist class="ml-2" [data]="providers" [textField]="'name'" [valueField]="'name'" [(ngModel)]="defaultProvider">
                     </kendo-dropdownlist>
                   </div>
                   <div class="text-left h5 mt-4 mb-4 heading">Departments</div>
